<resources>
    <string name="app_name">Technical Test BZPay</string>
    <string name="student_list_tittle">Estudiantes</string>
    <string name="weather">Clima</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="restore_password_button_text">¿Olvidaste tu contraseña? Restablécela</string>
    <string name="sign_in_button_text">Ó regístrate</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="login_with_google_text">Iniciar sesión con Google</string>
    <string name="copyright_text">Por Bruno Joctán García Palma 🤠</string>
    <string name="web_client_id">913600740711-n66fmt4mifrgo2gj3rh4loqvg0lp36sb.apps.googleusercontent.com</string>
    <string name="wait_moment">Espere un momento</string>
    <string name="sign_in_message">Iniciando Sesión</string>
    <string name="get_students_message">Recuperando alumnos</string>
    <string name="sign_in_error_message">No se pudo iniciar sesión</string>
    <string name="name_hint">Nombre(s)</string>
    <string name="lastname_hint">Apellido(s)</string>
    <string name="explain_password_hint">Nueva contraseña</string>
    <string name="repeat_password_hint">Repetir contraseña</string>
    <string name="wait_a_moment_label">Espere un momento</string>
    <string name="not_found_students">No se encontraron estudiantes</string>
    <string name="student_name">Nombre(s) del alumno</string>
    <string name="subject_hint">Asignatura</string>
    <string name="save_student_text">Registrar estudiante</string>
    <string name="new_student_registered">Estudiante registrado</string>
    <string name="student_age">Edad del estudiante</string>
    <string name="delete_student_success">Estudiante eliminado</string>
    <string name="cannot_get_weather_info">No se pudo obtener información del clima</string>
    <string name="getting_weather_info">Obteniendo datos del clima</string>
    <string name="update_weather_info">Actualizar Datos</string>
</resources>